--- a/src/main/resources/assets/searchonmcmod/lang/en_us.lang
+++ b/src/main/resources/assets/searchonmcmod/lang/en_us.lang
@@ -1,2 +1,3 @@
 key.categories.searchonmcmod=Search on MCMOD
 key.searchonmcmod.search_on_mcmod=Search on MCMOD
+text.searchonmcmod.mcmodid_not_found=Search on MCMOD: Unable to retrieve item MCMOD ID through the API, please check your network connection
