--- a/fabric/src/main/resources/assets/searchonmcmod/lang/en_us.json
+++ b/fabric/src/main/resources/assets/searchonmcmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "key.categories.searchonmcmod": "Search on MCMOD",
-  "key.searchonmcmod.search_on_mcmod": "Search on MCMOD"
+  "key.searchonmcmod.search_on_mcmod": "Search on MCMOD",
+  "text.searchonmcmod.mcmodid_not_found": "Search on MCMOD: Unable to retrieve item MCMOD ID through the MCMOD API, please check your network connection"
 }
