--- a/fabric/src/main/resources/assets/searchonmcmod/lang/zh_cn.json
+++ b/fabric/src/main/resources/assets/searchonmcmod/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "key.categories.searchonmcmod": "Search on MCMOD",
   "key.searchonmcmod.search_on_mcmod": "在 MC百科 中搜索",
-  "text.searchonmcmod.mcmodid_not_found": "MC百科搜索: 无法通过百科 API 获取物品 MCMOD ID，请检查您的网络情况"
+  "text.searchonmcmod.mcmodid_not_found": "MC百科搜索: 无法通过百科 API 获取物品 MCMOD ID，请检查您的网络情况",
+  "text.searchonmcmod.search_failed": "打开 MC 百科失败，请检查网络连接"
 }
