--- a/fabric/src/main/resources/assets/searchonmcmod/lang/zh_tw.json
+++ b/fabric/src/main/resources/assets/searchonmcmod/lang/zh_tw.json
@@ -1,5 +1,6 @@
 {
   "key.categories.searchonmcmod": "Search on MCMOD",
   "key.searchonmcmod.search_on_mcmod": "在 MC百科 中搜尋",
-  "text.searchonmcmod.mcmodid_not_found": "MC百科搜索: 無法透過百科 API 取得物品 MCMOD ID，請檢查您的網路情況"
+  "text.searchonmcmod.mcmodid_not_found": "MC百科搜索: 無法透過百科 API 取得物品 MCMOD ID，請檢查您的網路情況",
+  "text.searchonmcmod.search_failed": "開啟 MC 百科失敗，請檢查網路連線"
 }
