--- a/forge/src/main/resources/assets/searchonmcmod/lang/en_us.json
+++ b/forge/src/main/resources/assets/searchonmcmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "key.categories.searchonmcmod": "Search on MCMOD",
   "key.searchonmcmod.search_on_mcmod": "Search on MCMOD",
+  "key.searchonmcmod.copy_item_name": "Copy item name under cursor",
   "text.searchonmcmod.mcmodid_not_found": "Search on MCMOD: Unable to retrieve item MCMOD ID through the MCMOD API, please check your network connection",
   "text.searchonmcmod.searching": "Opening MCMOD",
   "text.searchonmcmod.search_failed": "Failed to open MCMOD, please check your network connection"
