--- a/forge/src/main/resources/assets/searchonmcmod/lang/en_us.json
+++ b/forge/src/main/resources/assets/searchonmcmod/lang/en_us.json
@@ -2,7 +2,11 @@
   "key.categories.searchonmcmod": "Search on MCMOD",
   "key.searchonmcmod.search_on_mcmod": "Search on MCMOD",
   "key.searchonmcmod.copy_item_name": "Copy item name under cursor",
+  "config.searchonmcmod.title": "Search on MCMOD Config",
+  "config.searchonmcmod.show_searching_hint": "Show a friendly hint after successfully triggering 'Open MCMOD'",
+  "config.searchonmcmod.show_copy_to_clipboard_hint": "Show a friendly hint after successfully triggering 'Copy item name'",
   "text.searchonmcmod.mcmodid_not_found": "Search on MCMOD: Unable to retrieve item MCMOD ID through the MCMOD API, please check your network connection",
   "text.searchonmcmod.searching": "Opening MCMOD",
+  "text.searchonmcmod.copy_to_clipboard": "Copied to clipboard",
   "text.searchonmcmod.search_failed": "Failed to open MCMOD, please check your network connection"
 }
